--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 ## Unity ##
-
 *.cs diff=csharp text
 *.cginc text
 *.shader text
@@ -46,4 +45,5 @@
 *.rns filter=lfs diff=lfs merge=lfs -text
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
+Assets/StylizedTown/Scenes/SampleSceneNight/LightingData.asset filter=lfs diff=lfs merge=lfs -text
 *.asset filter=lfs diff=lfs merge=lfs -text
