--- a/.gitattributes
+++ b/.gitattributes
@@ -46,4 +46,5 @@
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
 Assets/StylizedTown/Scenes/SampleSceneNight/LightingData.asset filter=lfs diff=lfs merge=lfs -text
+Assets/StylizedTown/Textures/Cobblestone_normal.png filter=lfs diff=lfs merge=lfs -text
 *.asset filter=lfs diff=lfs merge=lfs -text
