--- a/.gitattributes
+++ b/.gitattributes
@@ -47,4 +47,5 @@
 *.lxo filter=lfs diff=lfs merge=lfs -text
 Assets/StylizedTown/Scenes/SampleSceneNight/LightingData.asset filter=lfs diff=lfs merge=lfs -text
 Assets/StylizedTown/Textures/Cobblestone_normal.png filter=lfs diff=lfs merge=lfs -text
+[[:space:]]Assets/StylizedTown/Scenes/SampleSceneNight/LightingData.asset filter=lfs diff=lfs merge=lfs -text
 *.asset filter=lfs diff=lfs merge=lfs -text
