--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+Assets/StylizedTown/Textures/Cobblestone_normal.png filter=lfs diff=lfs merge=lfs -text
+Assets/StylizedTown/Scenes/SampleSceneNight/LightingData.asset filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.asset filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
